experiments with orgmode to github markup

--- a/README.org
+++ b/README.org
@@ -104,8 +104,8 @@ These installation instructions assume
 	- the comment character is =; (semicolon)=
 	- Commands are =(enclosed in parentheses)=
 	- Arguments separated by spaces, NOT commas
-	- Strings in ="double quotes"=
-	- One single quote ='(quotes the following object)=
+	- Strings in "double quotes"
+	- One single quote '(quotes the following object)
 
 If you're using an Apple Macintosh or a Microsoft Windows
 system you'll need to install appropriate command-line tools
